--- a/content/layanan.html
+++ b/content/layanan.html
@@ -67,6 +67,77 @@ draft: false
       <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/cover_portfolio.png" alt="" srcset="">
     </div>
   </div>
+
+  <!-- Layanan Kami -->
+  <div class="grid grid-cols-12 text-center bg-cyan_gray">
+    <div class="order-1 zalepik_illustration">
+        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_3.png">
+    </div>
+    <div class="order-2 zalepik_wrap_text_illustration">
+        <div class="col-start-2 col-span-4">
+            <h1 class="zalepik_title_number">01</h1>
+            <h1 class="zalepik_title pb-12">Pembuatan Website dan  Aplikasi
+                <h1>
+                    <p class="leading-7">
+                        Membantu kehidupan menjadi lebih baik dan sederhana menggunakan teknologi digital.
+                        Siap membantu pelanggan dari kelas enterprise, startup, umkm, hingga perorangan.
+                        <br>
+                        <a class="zalepik_button_arrow hover:text-white hover:shadow-button_arrow hover:border-blue-500 hover:bg-blue-500" href="../services/development/" target="_blank">→</a>
+                    </p>
+        </div>
+    </div>
+    <div class="md:order-3 order-4 zalepik_wrap_text_illustration">
+        <div class="col-start-2 col-span-4">
+            <h1 class="zalepik_title_number">02</h1>
+            <h1 class="zalepik_title pb-12">Analisa dan Desain UI/UX
+                <h1>
+                    <p class="leading-7">
+                        Membuat desain yang bermanfaat dan nyaman bagi pengguna, walaupun 
+                        mereka tidak menyadarinya. Estetika visual yang indah tentu tidak dilupakan.
+                        <br>
+                        <a class="zalepik_button_arrow hover:text-white hover:shadow-button_arrow hover:border-blue-500 hover:bg-blue-500" href="../services/uiux/" target="_blank">→</a>
+                    </p>
+        </div>
+    </div>
+    <div class="md:order-4 order-3 zalepik_illustration">
+        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_1.png">
+    </div>
+    <div class="order-5 zalepik_illustration">
+        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_2.png">
+    </div>
+    <div class="order-6 zalepik_wrap_text_illustration">
+        <div class="col-start-2 col-span-4">
+            <h1 class="zalepik_title_number">03</h1>
+            <h1 class="zalepik_title  pb-12">Desain Ilustrasi
+                <h1>
+                    <p class="leading-7">
+                        Gambar yang indah tidak sekedar hiasan. Pesan panjang dari suatu cerita terkadang butuh
+                        dipersingkat untuk disampaikan kepada orang.
+                        <br>
+                        <a class="zalepik_button_arrow hover:text-white hover:shadow-button_arrow hover:border-blue-500 hover:bg-blue-500" href="../services/illustration/" target="_blank">→</a>
+                    </p>
+        </div>
+    </div>
+    
+    <div class="md:order-7 order-8 zalepik_wrap_text_illustration">
+        <div class="col-start-2 col-span-4">
+            <h1 class="zalepik_title_number">04</h1>
+            <h1 class="zalepik_title pb-12">Desain Ikon dan Logo
+                <h1>
+                    <p class="leading-7">
+                        Tak jarang saat orang mendengar layanan desain UI/UX terkadang mereka juga berfikir 
+                        penyedia jasa juga melayani pembuatan desain logo, layout, banner, dan lainnya :)
+                        <br>
+                        <a class="zalepik_button_arrow hover:text-white hover:shadow-button_arrow hover:border-blue-500 hover:bg-blue-500" href="../services/icon_and_logo/" target="_blank">→</a>
+                    </p>
+        </div>
+    </div>
+    
+    <div class="md:order-8 order-7 zalepik_illustration">
+        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_4.png">
+    </div>
+  </div>
+  <!-- End Layanan Kami -->
   </main>
   <!-- End Main -->
 
