Perbaikan Link Hosting Gambar Github

--- a/content/clients/dekatbunda/atribusi/atribusi_sumber_gambar_dekatbunda.html
+++ b/content/clients/dekatbunda/atribusi/atribusi_sumber_gambar_dekatbunda.html
@@ -40,15 +40,15 @@
                 <div class="text-center"><a href="https://www.flaticon.com/free-icons/islam" title="islam icons">Islam icons created by andinur - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/muslimah" title="muslimah icons">Muslimah icons created by Siipkan Creative - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/coronavirus" title="coronavirus icons">Coronavirus icons created by berkahicon - Flaticon</a></div>
             </div>
             <div class="bloack grid grid-cols-1 place-content-center mb-24">
-                <img class="block mx-auto h-40" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/dekatbunda/3379219.png" alt="" srcset="">
+                <img class="block mx-auto h-40" src="https://zenzalepik.github.io/Zalepik_Images/clients/dekatbunda/3379219.png" alt="" srcset="">
                 <div class="text-center"><a href="https://www.flaticon.com/free-icons/coronavirus" title="coronavirus icons">Coronavirus icons created by berkahicon - Flaticon</a></div>
             </div>
             <div class="bloack grid grid-cols-1 place-content-center mb-24">
-                <img class="block mx-auto h-40" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/dekatbunda/7321100.png" alt="" srcset="">
+                <img class="block mx-auto h-40" src="https://zenzalepik.github.io/Zalepik_Images/clients/dekatbunda/7321100.png" alt="" srcset="">
                 <div class="text-center"><a href="https://www.flaticon.com/free-icons/muslimah" title="muslimah icons">Muslimah icons created by Siipkan Creative - Flaticon</a></div>
             </div>
             <div class="bloack grid grid-cols-1 place-content-center mb-24">
-                <img class="block mx-auto h-40" src="https://mzainulmuttaqin.github.io/Zalepik_Images/clients/dekatbunda/4273167.png" alt="" srcset="">
+                <img class="block mx-auto h-40" src="https://zenzalepik.github.io/Zalepik_Images/clients/dekatbunda/4273167.png" alt="" srcset="">
                 <div class="text-center"><a href="https://www.flaticon.com/free-icons/islam" title="islam icons">Islam icons created by andinur - Flaticon</a></div>
             </div>
             <div class="bloack grid grid-cols-1 place-content-center mb-24">
