--- a/content/gratisan.html
+++ b/content/gratisan.html
@@ -6,7 +6,7 @@ draft: false
 
   <!-- Header -->
   <header>
-    <div><img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_head_freebies_md.svg" alt="" srcset="" class="w-full block md:hidden"></div>
+    <div><img src="https://zenzalepik.github.io/Zalepik_Images/img_head_freebies_md.svg" alt="" srcset="" class="w-full block md:hidden"></div>
     <div class="grid grid-cols-12 header_gratisan">
       <div id="title_header_home" class="zalepik_wrap_large_area lg:pb-20 pb-20">
         <h1 class="col-start-1 col-end-13 lg:col-start-2 lg:col-end-8 text-center lg:text-left mb-0 lg:mb-16"><span class="text-green-500 zalepik_title_border zalepik_title_shadow_2" title=""></span><span class="text-green-500 zalepik_title_border zalepik_title_shadow_2" title="Aset Gratis">Aset Gratis</span><br>
@@ -23,7 +23,7 @@ draft: false
       <div class="col-start-2 col-end-12 grid lg:grid-cols-6 md:grid-cols-3 text-center lg:pb-32 pb-12 grid-cols-6 gap-y-20">
         <div class="zalepik_category">
           <a href="">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-tool-all.svg" alt="">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-tool-all.svg" alt="">
             <!--<br>
             <span>
               All
@@ -32,7 +32,7 @@ draft: false
         </div>
         <div class="zalepik_category">
           <a href="">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-tool-figma.svg" alt="">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-tool-figma.svg" alt="">
             <!--<br>
             <span>
               Figma
@@ -41,7 +41,7 @@ draft: false
         </div>
         <div class="zalepik_category">
           <a href="">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-tool-xd.svg" alt="">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-tool-xd.svg" alt="">
             <!--<br>
             <span>
               Adobe XD
@@ -50,7 +50,7 @@ draft: false
         </div>
         <div class="zalepik_category">
           <a href="">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-tool-invision.svg" alt="">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-tool-invision.svg" alt="">
             <!--<br>
             <span>
               Invision Studio
@@ -59,7 +59,7 @@ draft: false
         </div>
         <div class="zalepik_category">
           <a href="">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-tool-svg.svg" alt="">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-tool-svg.svg" alt="">
             <!--<br>
             <span>
               Inkscape
@@ -68,7 +68,7 @@ draft: false
         </div>
         <div class="zalepik_category">
             <a href="">
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-tool-html.svg" alt="">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-tool-html.svg" alt="">
               <!--<br>
               <span>
                 HTML
@@ -82,39 +82,39 @@ draft: false
     <div class="zalepik_wrap_title_section">
       <div id="galery_freebies" class="zalepik_galery">
         <a href="https://www.uplabs.com/posts/usg-website" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebee_usg.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebee_usg.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/all-gimpscape-banner" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_All Gimscape Banner.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_All Gimscape Banner.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/zalepik_freebie_instagram-ruang-berbagi-dan-diskusi" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_Instagram GimpscapeID.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_Instagram GimpscapeID.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/zalepik_freebie_instagram-ruang-berbagi-dan-diskusi-abc3fc73-5f79-406e-acb1-8031e1910e7c" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_Instagram Ruang Berbagi dan Diskusi.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_Instagram Ruang Berbagi dan Diskusi.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/zalepik-freebie-instagram-sekedar-mencari-ide" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_Instagram Sekedar Mencari Ide.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_Instagram Sekedar Mencari Ide.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/zalepik-freebie-oreo" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_Oreo.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_Oreo.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/perbaiki-rancangan-antra-muka-kalian-banner-gimp" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_Perbaiki Rancangan Antra Muka Kalian  Banner Gimpscae ID.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_Perbaiki Rancangan Antra Muka Kalian  Banner Gimpscae ID.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/if-paperpillar-website-become-zalepik-website" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_Zalepik Website.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_Zalepik Website.png">
           <div class="icon_download"></div>
         </a>
         <a href="https://www.uplabs.com/posts/freebie-jelly-cactus" target="_blank">
-          <img class="zalepik_image_galery" src="https://mzainulmuttaqin.github.io/Zalepik_Images/freebie/zalepik_freebie_illustration_cactus_flat_design.png">
+          <img class="zalepik_image_galery" src="https://zenzalepik.github.io/Zalepik_Images/freebie/zalepik_freebie_illustration_cactus_flat_design.png">
           <div class="icon_download"></div>
         </a>
       </div>
@@ -134,9 +134,9 @@ draft: false
   <div class="w-full relative">
       <a href="../hubungi/"
           class="zalepik_hubungi zalepik_button_blue absolute top-0 py-4 px-10 mb-64 mx-auto inset-x-0 w-56 text-center rounded-lg zalepik_index9">Mari Bekerjasama →</a></li>
-      <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs.png" alt="" srcset=""
+      <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs.png" alt="" srcset=""
           class="w-full let_start_collabs hidden md:block">
-      <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs_sm.png" alt="" srcset=""
+      <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs_sm.png" alt="" srcset=""
           class="w-full let_start_collabs block md:hidden">
   </div>
   <!-- End Contact-->
