--- a/content/harga.html
+++ b/content/harga.html
@@ -10,7 +10,7 @@ draft: false
     <div class="grid grid-cols-12 mb-32">
         <div id="title_header_home" class="zalepik_wrap_large_area sm:pt-4 pt-0 text-center grid grid-cols-12 pb-0 zalepik_index9" style="z-index: 9 !important;">
             <a class="duration-300 hover:opacity-80 hover:shadow-8xl rounded-lg sm:col-start-3 sm:col-end-11 col-start-1 col-end-13 sm:p-0 p-4 mx-auto sm:w-3/4 w-full shadow-img_hover border-8 border-white" target="_blank" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20mendaftar%20paket%20promo%20pembuatan%20website%0A%0A">
-              <img class="w-full" src="https://mzainulmuttaqin.github.io/Zalepik_Images/promo/img_promo_website_murah.png" alt="" srcset="">
+              <img class="w-full" src="https://zenzalepik.github.io/Zalepik_Images/promo/img_promo_website_murah.png" alt="" srcset="">
             </a>
               <div class="col-start-1 col-end-13">
                 <a class="zalepik_button_blue block py-4 px-10 zalepik_button_banner_home mx-auto inset-x-0 w-56 text-center rounded-lg" target="_blank" href="https://wa.me/6281330876992?text=Assalamu%27alaikum...%0A%0A%F0%9F%91%8BHalo...%20Saya%20ingin%20mendaftar%20paket%20promo%20pembuatan%20website%0A%0A">
@@ -42,37 +42,37 @@ draft: false
         </svg>          
       </h1>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-landing-page.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-landing-page.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title">Landing Page</div>
         <div class="zalepik_pricing_table_mulaidari">Mulai dari</div>
         <div class="zalepik_pricing_table_price">Rp. 1,3 juta</div>
         <div class="zalepik_pricing_table_list">
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Sudah termasuk domain</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>1 landing page</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Gratis Ilustrasi </span>
           </div>
           <div>
-            <img class="opacity-0" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img class="opacity-0" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span class="zalepik_pricing_table_list_note">Ilustrasi rumit akan dikenakan biaya tambahan</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>3 kali revisi</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
             <span>1 tahun masa troubleshot</span>
           </div>
           <div class="opacity-0">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
             <span>Gratis setup 5 konten/artikel</span>
           </div>
         </div>
@@ -81,37 +81,37 @@ draft: false
         </div>
       </div>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-company-profile.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-company-profile.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title">Company Profile</div>
         <div class="zalepik_pricing_table_mulaidari">Mulai dari</div>
         <div class="zalepik_pricing_table_price">Rp. 1,5 juta</div>
         <div class="zalepik_pricing_table_list">
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Sudah termasuk domain</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>7 halaman</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Gratis Ilustrasi </span>
           </div>
           <div>
-            <img class="opacity-0" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img class="opacity-0" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span class="zalepik_pricing_table_list_note">Ilustrasi rumit akan dikenakan biaya tambahan</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>3 kali revisi</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
             <span>2 tahun masa troubleshot</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Gratis setup 5 konten/artikel</span>
           </div>
         </div>
@@ -120,37 +120,37 @@ draft: false
         </div>
       </div>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-online-shop.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-online-shop.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title">Toko Online</div>
         <div class="zalepik_pricing_table_mulaidari">Mulai dari</div>
         <div class="zalepik_pricing_table_price">Rp. 2,5 juta</div>
         <div class="zalepik_pricing_table_list">
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Sudah termasuk domain</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>15 halaman</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Gratis Ilustrasi </span>
           </div>
           <div>
-            <img class="opacity-0" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img class="opacity-0" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span class="zalepik_pricing_table_list_note">Ilustrasi rumit akan dikenakan biaya tambahan</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>5 kali revisi</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
             <span>2 tahun masa troubleshot</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Gratis setup 5 konten/artikel</span>
           </div>
         </div>
@@ -159,7 +159,7 @@ draft: false
         </div>
       </div>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-interactive-website.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-interactive-website.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title_2">
           Website Interaktif, <span class="text-yellow-500">Custom</span>, <span class="text-green-500">Kelas EnterPrise</span>
         </div>
@@ -193,7 +193,7 @@ draft: false
       </h1>
       <div class="zalepik_table_mobile_development">
         <div class="zalepik_wrap_table_h">
-          <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-mobile.png" alt="" srcset="">
+          <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-mobile.png" alt="" srcset="">
           <div class="zalepik_pricing_table_title">Aplikasi Mobile
             Android/iOS</div>
           <div class="zalepik_pricing_table_mulaidari">Mulai dari</div>
@@ -202,23 +202,23 @@ draft: false
         <div class="zalepik_wrap_table_h">
           <div class="zalepik_pricing_table_list">
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>Dapat layanan UI/UX Design</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>3 kali revisi desain</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>Development mobile app (Andriod/iOS)</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>Gratis logo aplikasi</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
               <span>1 bulan masa pendampingan troubleshot</span>
             </div>
           </div>
@@ -229,7 +229,7 @@ draft: false
       </div>
       <div class="zalepik_table_mobile_development">
         <div class="zalepik_wrap_table_h">
-          <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-mobile-and-web-dashboard.png" alt="" srcset="">
+          <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-mobile-and-web-dashboard.png" alt="" srcset="">
           <div class="zalepik_pricing_table_title">Aplikasi Mobile
             Android/iOS
             +
@@ -240,27 +240,27 @@ draft: false
         <div class="zalepik_wrap_table_h">
           <div class="zalepik_pricing_table_list">
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>Dapat layanan UI/UX Design</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>3 kali revisi desain</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>Development mobile app (Andriod/iOS)</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>Development webpanel/webadmin</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
               <span>Gratis logo aplikasi</span>
             </div>
             <div>
-              <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+              <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
               <span>1 bulan masa pendampingan troubleshot</span>
             </div>
           </div>
@@ -284,7 +284,7 @@ draft: false
         </svg>                            
       </h1>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-uiux-design.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-uiux-design.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title_2">
           UI/UX <span class="text-yellow-500">Design</span>
         </div>
@@ -300,7 +300,7 @@ draft: false
         </div>
       </div>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-user-research-and-analize.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-user-research-and-analize.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title_2">
           User Research <span class="text-yellow-500">dan Analisa Website/App</span> <span class="text-green-500">Tingkat Lanjut</span>
         </div>
@@ -314,29 +314,29 @@ draft: false
         </div>
       </div>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-illustration.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-illustration.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title">Desain Ilustrasi</div>
         <div class="zalepik_pricing_table_mulaidari">Mulai dari</div>
         <div class="zalepik_pricing_table_price">Rp. 200ribu</div>
         <div class="zalepik_pricing_table_list">
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Source file (.ai, .svg, .afdesign, .xd, .sketch, .fig, .blend, .eps, .psd)</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>PNG and JPG</span>
           </div>
           <div>
-            <img class="opacity-0" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img class="opacity-0" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span class="zalepik_pricing_table_list_note text-blue-500">*source file Adobe Illustrator (.ai) hanya untuk pemesanan di atas Rp. 600ribu.</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>3 kali revisi</span>
           </div>
           <div class="opacity-0">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
             <span>2 tahun masa troubleshot</span>
           </div>
         </div>
@@ -345,29 +345,29 @@ draft: false
         </div>
       </div>
       <div>
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-price-icon-and-logo.png" alt="" srcset="">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img-price-icon-and-logo.png" alt="" srcset="">
         <div class="zalepik_pricing_table_title">Desain Ikon dan Logo</div>
         <div class="zalepik_pricing_table_mulaidari">Mulai dari</div>
         <div class="zalepik_pricing_table_price">Rp. 350ribu</div>
         <div class="zalepik_pricing_table_list">
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>Source file (.ai, .svg, .afdesign, .xd, .sketch, .fig, .blend, .eps, .psd)</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>PNG and JPG</span>
           </div>
           <div>
-            <img class="opacity-0" src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img class="opacity-0" src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span class="zalepik_pricing_table_list_note text-blue-500">*harga desain ikon dengan bentuk simpel mulai dari Rp. 90ribu.</span>
           </div>
           <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-check.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-check.svg">
             <span>3 kali revisi</span>
           </div>
           <div class="opacity-0">
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/icons/icon-scure.svg">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/icons/icon-scure.svg">
             <span>2 tahun masa troubleshot</span>
           </div>
         </div>
@@ -391,9 +391,9 @@ draft: false
   <div class="w-full relative">
       <a href="../hubungi/"
           class="zalepik_hubungi zalepik_button_blue absolute top-0 py-4 px-10 mb-64 mx-auto inset-x-0 w-56 text-center rounded-lg zalepik_index9">Mari Bekerjasama →</a></li>
-      <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs.png" alt="" srcset=""
+      <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs.png" alt="" srcset=""
           class="w-full let_start_collabs hidden md:block">
-      <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs_sm.png" alt="" srcset=""
+      <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs_sm.png" alt="" srcset=""
           class="w-full let_start_collabs block md:hidden">
   </div>
   <!-- End Contact-->
