--- a/content/tentang.html
+++ b/content/tentang.html
@@ -32,11 +32,11 @@ ztentang: "Tentang"
                     </p>
                 </div>
                 <div class="order-1 lg:order-2 col-start-1 lg:col-start-7 col-end-13 text-right bg_natural h-full">
-                    <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_zalepik_profile.svg" class="inline-block mt-20">
+                    <img src="https://zenzalepik.github.io/Zalepik_Images/img_zalepik_profile.svg" class="inline-block mt-20">
                 </div>
             </div>
             
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/element_head.png" class="absolute w-full mt-64 sm:mt-96 opacity-20 lg:opacity-100">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/element_head.png" class="absolute w-full mt-64 sm:mt-96 opacity-20 lg:opacity-100">
         </div>
     </header>
     <!-- End Header -->
@@ -46,7 +46,7 @@ ztentang: "Tentang"
     <main>
 
         <div>
-            <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/zalepik_zain_full_3.png" alt="" class="w-full">
+            <img src="https://zenzalepik.github.io/Zalepik_Images/zalepik_zain_full_3.png" alt="" class="w-full">
         </div>
         <div class="grid grid-cols-12 text-center">
             <div id="title_header" class="zalepik_wrap_large_area lg:pb-20 pb-20">
@@ -56,7 +56,7 @@ ztentang: "Tentang"
         <div id="uiux" class="grid mb-24 sm:grid-cols-4 grid-cols-1 bg-cyan_gray rounded-3xl overflow-hidden sm:p-4 p-2 sm:mx-10 mx-2 text-center gap-4">
             <div class="bg-white">
               <div class="p-8">
-                <img class="rounded-3xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_3.png" alt="" srcset="">
+                <img class="rounded-3xl" src="https://zenzalepik.github.io/Zalepik_Images/img_skill_3.png" alt="" srcset="">
               </div>
                 <h1 class="zalepik_title_number">01</h1>
                 <h1 class="zalepik_title text-xl capitalize leading-tight text-blue-500 tracking-tight">
@@ -65,7 +65,7 @@ ztentang: "Tentang"
             </div>
             <div class="bg-white zalepik-border-x-1">
               <div class="p-8">
-                <img class="rounded-3xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_1.png" alt="" srcset="">
+                <img class="rounded-3xl" src="https://zenzalepik.github.io/Zalepik_Images/img_skill_1.png" alt="" srcset="">
               </div>
                 <h1 class="zalepik_title_number">02</h1>
                 <h1 class="zalepik_title text-xl capitalize leading-tight text-blue-500 tracking-tight">
@@ -74,7 +74,7 @@ ztentang: "Tentang"
             </div>
             <div class="bg-white">
               <div class="p-8">
-                <img class="rounded-3xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_2.png" alt="" srcset="">
+                <img class="rounded-3xl" src="https://zenzalepik.github.io/Zalepik_Images/img_skill_2.png" alt="" srcset="">
               </div>
                 <h1 class="zalepik_title_number">03</h1>
                 <h1 class="zalepik_title text-xl capitalize leading-tight text-blue-500 tracking-tight">
@@ -83,7 +83,7 @@ ztentang: "Tentang"
             </div>
             <div class="bg-white">
               <div class="p-8">
-                <img class="rounded-3xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_4.png" alt="" srcset="">
+                <img class="rounded-3xl" src="https://zenzalepik.github.io/Zalepik_Images/img_skill_4.png" alt="" srcset="">
               </div>
                 <h1 class="zalepik_title_number">04</h1>
                 <h1 class="zalepik_title text-xl capitalize leading-tight text-blue-500 tracking-tight">
