--- a/content/layanan.html
+++ b/content/layanan.html
@@ -20,7 +20,7 @@ draft: false
       <div id="software" class="grid sm:grid-cols-12 grid-cols-1 gap-2 bg-cyan_gray sm:p-8 p-2 sm:mx-10 mx-2 mb-32 rounded-3xl text-center">
         <a class="col-start-1 col-end-2 sm:col-start-1 sm:col-end-4 bg-white rounded-3xl duration-100 hover:text-blue-500 hover:shadow-8xl" href="../services/development/">
           <div>
-            <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-development-thumbnail.png" alt="">
+            <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-development-thumbnail.png" alt="">
           </div>
           <div>
             <h1>
@@ -30,7 +30,7 @@ draft: false
         </a>
         <a class="col-start-1 col-end-2 sm:col-start-4 sm:col-end-7 bg-white rounded-3xl duration-100 hover:text-blue-500 hover:shadow-8xl" href="../services/uiux/">
           <div>
-            <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-uiux-thumbnail.png" alt="">
+            <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-uiux-thumbnail.png" alt="">
           </div>
           <div>
             <h1>
@@ -40,7 +40,7 @@ draft: false
         </a>
         <a class="col-start-1 col-end-2 sm:col-start-7 sm:col-end-10 bg-white rounded-3xl duration-100 hover:text-blue-500 hover:shadow-8xl" href="../services/illustration/">
           <div>
-            <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-illustration-thumbnail.png" alt="">
+            <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-illustration-thumbnail.png" alt="">
           </div>
           <div>
             <h1>
@@ -50,7 +50,7 @@ draft: false
         </a>
         <a class="col-start-1 col-end-2 sm:col-start-10 sm:col-end-13 bg-white rounded-3xl duration-100 hover:text-blue-500 hover:shadow-8xl" href="../services/icon_and_logo/">
           <div>
-            <img class="rounded-2xl" src="https://mzainulmuttaqin.github.io/Zalepik_Images/img-service-header-icon-and-logo-thumbnail.png" alt="">
+            <img class="rounded-2xl" src="https://zenzalepik.github.io/Zalepik_Images/img-service-header-icon-and-logo-thumbnail.png" alt="">
           </div>
           <div>
             <h1>
@@ -64,14 +64,14 @@ draft: false
       </div>
       
     <div>
-      <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/cover_portfolio.png" alt="" srcset="">
+      <img src="https://zenzalepik.github.io/Zalepik_Images/cover_portfolio.png" alt="" srcset="">
     </div>
   </div>
 
   <!-- Layanan Kami -->
   <div class="grid grid-cols-12 text-center bg-cyan_gray">
     <div class="order-1 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_3.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_3.png">
     </div>
     <div class="order-2 zalepik_wrap_text_illustration">
         <div class="col-start-2 col-span-4">
@@ -100,10 +100,10 @@ draft: false
         </div>
     </div>
     <div class="md:order-4 order-3 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_1.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_1.png">
     </div>
     <div class="order-5 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_2.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_2.png">
     </div>
     <div class="order-6 zalepik_wrap_text_illustration">
         <div class="col-start-2 col-span-4">
@@ -134,7 +134,7 @@ draft: false
     </div>
     
     <div class="md:order-8 order-7 zalepik_illustration">
-        <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_skill_4.png">
+        <img src="https://zenzalepik.github.io/Zalepik_Images/img_skill_4.png">
     </div>
   </div>
   <!-- End Layanan Kami -->
@@ -153,9 +153,9 @@ draft: false
   <div class="w-full relative">
       <a href="../hubungi/"
           class="zalepik_hubungi zalepik_button_blue absolute top-0 py-4 px-10 mb-64 mx-auto inset-x-0 w-56 text-center rounded-lg zalepik_index9">Mari Bekerjasama →</a></li>
-      <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs.svg" alt="" srcset=""
+      <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs.svg" alt="" srcset=""
           class="w-full let_start_collabs hidden md:block">
-      <img src="https://mzainulmuttaqin.github.io/Zalepik_Images/img_let_start_collabs_sm.svg" alt="" srcset=""
+      <img src="https://zenzalepik.github.io/Zalepik_Images/img_let_start_collabs_sm.svg" alt="" srcset=""
           class="w-full let_start_collabs block md:hidden">
   </div>
   <!-- End Contact-->
