--- a/public/index.html
+++ b/public/index.html
@@ -333,7 +333,7 @@
         </div>
         <div>
           <h1>
-            <b>Mantenance/Support</b>
+            <b>Maintenance/Support</b>
           </h1>
           <div>Bebas dan berbahagialah mengurusi bisnis anda, ada masalah terkait website. Hubungi saja kami. Kami siap
             membantu! Free backup bulanan untuk website anda.</div>
