--- a/public/artikel/cara-install-nextjs/index.html
+++ b/public/artikel/cara-install-nextjs/index.html
@@ -312,16 +312,15 @@
 <div class="zbarisbaru"></div>
 <p>Hal pertama sebelum install NextJS pastikan anda sudah menginstall nodejs, nah untuk bisa menjalankan Next versi terbaru kita harus menggunakan node versi 18 ke atas bisa di lihat di dokumentasi nextjs <a href="https://nextjs.org/docs">https://nextjs.org/docs</a>.</p>
 <div class="zbarisbaru"></div>
-<p>Jika sudah insatal node.js pastikan kalian untuk mengeceknya kembali di terminal kalin dengan perintah node –-versio dan npm &ndash;version, maka akan mucul versi node kalian</p>
+<p>Jika sudah insatal node.js pastikan kalian untuk mengeceknya kembali di terminal kalin dengan perintah node –-versio dan npm &ndash;version, maka akan muncul versi node kalian</p>
 <pre class="language-javascript">
   <code class="language-javascript">
 $node --version
-npm --version
+$npm --version
   </code>
 </pre>
-<p>image terminal version
-<img class="" src="https://zalepik-studio.github.io/ZalepikWebsite/static/images/Screenshot (2).png" alt="Pemasangan script CDN JS.">
-Disini saya menggunakan node versi 21 dan npm versi 10. Jika node dan npm sudah terinstall dengan aman maka kita menuju seteps selanjutnya yaitu insatl NextJS</p>
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/terminal-version-ndoe.png?raw=true" alt="node version">
+<p>Disini saya menggunakan node versi 21 dan npm versi 10. Jika node dan npm sudah terinstall dengan aman maka kita menuju seteps selanjutnya yaitu insatl NextJS</p>
 <div class="zbarisbaru"></div>
 <p>Selanjutnya kalian bisa membuat foleder baru dengan nama setup-next setelah itu buka CMD dengan path yang mengarah ke folder yang baru di buat, jika sudah masuk ke path floder langsung saja ketikan perintah <strong>npx create-next-app@latest .</strong></p>
 <pre class="language-javascript">
@@ -330,19 +329,18 @@ Disini saya menggunakan node versi 21 dan npm versi 10. Jika node dan npm sudah 
    </code>
 </pre>
 <div class="zbarisbaru"></div>
-<p>image install nextjs
-<img class="" src="https://zalepik-studio.github.io/ZalepikWebsite/static/images/Screenshot (2).png" alt="Pemasangan script CDN JS.">
-Disini kita install next dengan App Router, sesuaikan seperti gambar di atas agar konfigurasi kedepannya kita bisa sama dan tidak ada kendala</p>
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/install-nextjs.png?raw=true" alt="instalasi nextjs">
+<p>Disini kita install next dengan App Router, sesuaikan seperti gambar di atas agar konfigurasi kedepannya kita bisa sama dan tidak ada kendala</p>
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/install-success-nextjs.png?raw=true" alt="success instalasi nextjs">
+<p>Jika sudah ada tulisan Success! Seperti gambar di atas maka proses instalasi telah berhasil, selamat.</p>
 <div class="zbarisbaru"></div>
 <p>Selanjutnya buka folder tersebut di visual studio code, anda bisa menggunakan perintah code . di path yang sama pada folder setup-next</p>
 <div class="zbarisbaru"></div>
 <p>Setelah di buka maka kita akan mendapatkan struktur folder seperti di bawah ini
-image struktur folder
-<img class="" src="https://zalepik-studio.github.io/ZalepikWebsite/static/images/Screenshot (2).png" alt="Pemasangan script CDN JS.">
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/struktur-folder-nextjs.png?raw=true" alt="struktur-folder">
 Hal selanjutnya kalian bisa coba untuk run dengan perintah <strong>npm run dev</strong> di terminal visual setudio code, lalu apa yang terjadi? Selamat anda sudah bisa menjalankan projek next pertama kalian!</p>
 <div class="zbarisbaru"></div>
-<p>image tampilan awal nextjs
-<img class="" src="https://zalepik-studio.github.io/ZalepikWebsite/static/images/Screenshot (2).png" alt="Pemasangan script CDN JS."></p>
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/page-pertama-nextjs.png?raw=true" alt="page-awal-nextjs">
 <p>secara default NextJS runing di port http://localhost:3000 dan tampilan awal NextJS seperti di atas, jika kalian ingin mengantinya kalian bisa pergi ke folder <strong>app-&gt;page.js</strong>. Lalu ubah seperti code di bawah</p>
 <pre class="language-javascript">
   <code class="language-javascript">
@@ -350,13 +348,49 @@ import React from 'react'
 
 const About = () => {
   return (
-    <div>About</div>
+    <div>Hallo semua!!</div>
   )
 }
 
 export default About
   </code>
 </pre>
+<p>Maka otomatis halaman langsung berubah tanpa kita reload, nah ini yang disebut Hot Module Replacement pada NextJS</p>
+<div class="zbarisbaru"></div>
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/page-setelah-diubah.png?raw=true" alt="page setelah di ubah JS.">
+<p>Maka otomatis halaman langsung berubah tanpa kita reload, nah ini yang disebut Hot Module
+Replacement pada NextJS</p>
+<div class="zbarisbaru"></div>
+<p>Lalu bagai mana untuk membuat halaman atau page baru di NextJS?</p>
+<div class="zbarisbaru"></div>
+<p>Itu sangat simpel dan sangat mudah tanpa menggunakan konfigurasi route yang akan di tuju seperti
+yang ada di react js dan kita tidak perlu menginstall react router dom, tapi sebelum itu kalian bisa
+melihat ilustrasi dibawah ini terlebih dahulu:</p>
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/ilustrasi-root.png?raw=true" alt="ilustrasi root">
+<p>Dimana file yang berada di dalam app berfungsi sebagai rootnya, lalu file layout.js merupakan root
+dari layout dsigin yang akan kita buat sedangkan page.js merupakan file yang akan pertama kali di render atau di tampilkan jika website kita pertama kali di buka</p>
+<div class="zbarisbaru"></div>
+<p>Oke. Langsung saja kita membuat halaman baru, silahkan kalian membuat folder about lalu di dalmnya kalian buat file page.js sperti di bawah ini
+<img calss="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/membuat-page-dinextjs.png?raw=true" alt="page about CDN"></p>
+<div class="zbarisbaru"></div>
+<p>lalu buat code di folder about/page.js seperti di bawah ini</p>
+<pre class="language-javascript">
+  <code class="language-javascript">
+import React from 'react'
+
+const About = () => {
+  return (
+    <div>Hallo semua!!</div>
+  )
+}
+
+export default About
+  </code>
+</pre>
+<p>Dengan struktur folder di atas otomatis kita sudah di buatkan rutingan oleh next js di mana pathnya akan mengarah ke /about</p>
+<img class="" src="https://github.com/zenzalepik/Zalepik_Images/blob/amar-2024/artikel/root-about.png?raw=true" alt="root page about">
+<div class="zbarisbaru"></div>
+<p>nahh kita telah menjelajahi langkah-langkah pertama dalam memulai dengan Next.js, sebuah platform yang kuat untuk pengembangan aplikasi web React. Melalui panduan instalasi awal hingga penerapan routing dasar, kita dapat memahami betapa mudahnya memulai dengan Next.js dan memanfaatkan fitur-fitur yang disediakannya. Dengan Next.js, pengembang dapat dengan cepat membangun aplikasi web yang responsif dan cepat, sambil tetap memiliki kontrol penuh atas struktur proyek dan navigasi pengguna. Dengan demikian, langkah-langkah awal ini memberikan fondasi yang solid bagi para pengembang untuk menjelajahi lebih jauh potensi Next.js dalam membangun pengalaman web yang menarik dan inovatif.</p>
 
                     <h3>Sekian, Semoga Bermanfaat!</h3>
                     <p>Jangan lupa share artikel ini ke orang lain, barangkali mereka membutuhkan. Jangan sungkan hubungi kami bila ada pertanyan. Atau silahkan tinggalkan komentar di bawah dan mari kita berdiskusi.</p>
