feat: make shortcodes language Js

--- a/public/artikel/javascript-variable/index.html
+++ b/public/artikel/javascript-variable/index.html
@@ -363,6 +363,21 @@ console.log(age);
 <div class="zbarisbaru"></div>
 <p>Untuk mendeklarasikan variabel di JavaScript menggunakan const, gunakan keyword const kemudian di ikuti dengan nama variabelnya.</p>
 <pre class="language-javascript">
+   <code class="language-javascript">
+     
+const age = 18;
+const name = "amar Nuruddin"
+
+console.log(age);
+
+/* output
+18
+*/
+
+   </code>
+ </pre>
+ 
+<pre class="language-javascript">
   <code class="language-javascript">
 const age = 18;
 
